# mantra_mfs100

./: README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/coodepanthers/mantra_mfs100/mantra_mfs100/: MantraMfs100Plugin.kt
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/coodepanthers/mantra_mfs100/mantra_mfs100_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: ffi_bridge.dart  main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: mantra_mfs100.podspec
ios/Classes/: MantraMfs100Plugin.h  MantraMfs100Plugin.m  SwiftMantraMfs100Plugin.swift
lib/: mantra_mfs100.dart
test/: mantra_mfs100_test.dart
windows/: CMakeLists.txt  MFS100Dll.lib  WSQ_library64.lib  mantra_mfs100_plugin.cpp
windows/include/mantra_mfs100/: MFS100Dll.h  WSQ_library64.h  lib.cpp  mantra_mfs100_plugin.h
